--- a/style.css
+++ b/style.css
@@ -3,29 +3,39 @@ html, body {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  background: #fff;
+  box-sizing: border-box;
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  min-height: 100vh;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+  background: #fff;
   font-family: sans-serif;
 }
 
-#container {
-  margin-top: 20px;
+#main-layout {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: stretch;
 }
 
 #game-canvas {
-  display: block;
+  flex: 1 1 auto;
+  width: 100vw;
+  height: 60vh;
+  min-height: 350px;
+  max-height: 80vh;
   background: #ffe0fa;
   border: 3px solid #222;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  display: block;
 }
 
 #controls {
@@ -33,6 +43,8 @@ body {
   flex-direction: row;
   gap: 0.5em;
   margin-bottom: 1em;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 #controls button {
@@ -74,6 +86,7 @@ body {
   padding: 10px 30px 10px 30px;
   border: 1px solid #222;
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 #sliders > div {
