--- a/style.css
+++ b/style.css
@@ -139,7 +139,8 @@ label {
   font-size: 1em;
   color: #222;
 }
-#born-value, #survive-value, #speed-value, #ghostfade-value, #vibrance-value {
+#born-value, #survive-value, #speed-value,
+#ghostfade-value, #vibrance-value, #frame-value {
   font-weight: bold;
   margin-left: 0.3em;
   color: #aa0099;
