--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ input[type="range"] {
 }
 #ghostfade-slider { width: 70px; }
 #vibrance-slider { width: 70px; }
+#frame-slider { width: 90px; }
 select {
   font-size: 1em;
   border-radius: 4px;
