--- a/style.css
+++ b/style.css
@@ -255,3 +255,12 @@ label {
   margin-right: auto;
   display: block;
 }
+#preview-size {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  justify-content: center;
+}
+#pattern-zoom {
+  width: 100px;
+}
