--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 #menu-toggle {
   display: none;
-  position: absolute;
+  position: fixed;
   right: 10px;
   bottom: 10px;
   z-index: 25;
